@@ -6,12 +6,12 @@
 	<parent>
 		<groupId>org.fuin</groupId>
 		<artifactId>pom</artifactId>
-		<version>1.9.0</version>
+		<version>1.8.0-SNAPSHOT</version>
 	</parent>
 
 	<groupId>org.fuin.esc</groupId>
 	<artifactId>esc-parent</artifactId>
-	<version>0.7.0</version>
+	<version>0.5.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>esc-parent</name>
 	<description>Defines a common event store Java interface and provides some adapters (like for Greg Young's event store) and implementations (like in-memory or file-based).</description>
@@ -29,7 +29,6 @@
 
 	<properties>
 		<eventstore.version>21.10.1-bionic</eventstore.version>
-		<failsafe.argLine>--add-opens java.base/java.util=ALL-UNNAMED</failsafe.argLine>
 	</properties>
 
 	<dependencyManagement>
@@ -81,13 +80,13 @@
 			<dependency>
 				<groupId>org.fuin</groupId>
 				<artifactId>utils4j</artifactId>
-				<version>0.13.0</version>
+				<version>0.12.1-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.fuin</groupId>
 				<artifactId>objects4j</artifactId>
-				<version>0.9.0</version>
+				<version>0.8.1-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
@@ -145,9 +144,9 @@
 			</dependency>
 
 			<dependency>
-				<groupId>org.junit.jupiter</groupId>
-				<artifactId>junit-jupiter</artifactId>
-				<version>5.10.1</version>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>4.13.2</version>
 			</dependency>
 
 			<dependency>
@@ -159,7 +158,7 @@
 			<dependency>
 				<groupId>org.fuin</groupId>
 				<artifactId>units4j</artifactId>
-				<version>0.11.0</version>
+				<version>0.10.1-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
@@ -189,20 +188,13 @@
 			<dependency>
 				<groupId>net.javacrumbs.json-unit</groupId>
 				<artifactId>json-unit-fluent</artifactId>
-				<version>3.0.0</version>
+				<version>2.38.0</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.mockito</groupId>
 				<artifactId>mockito-core</artifactId>
 				<version>5.8.0</version>
-			</dependency>
-
-			<dependency>
-				<groupId>org.mockito</groupId>
-				<artifactId>mockito-junit-jupiter</artifactId>
-				<version>5.8.0</version>
-				<scope>test</scope>
 			</dependency>
 
 			<dependency>
@@ -351,43 +343,12 @@
 					<artifactId>docker-maven-plugin</artifactId>
 					<version>0.38.1</version>
 				</plugin>
-
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-failsafe-plugin</artifactId>
-					<version>3.2.3</version>
-					<configuration>
-						<argLine>${failsafe.argLine}</argLine>
-					</configuration>
-					<executions>
-						<execution>
-							<id>integration-test</id>
-							<goals>
-								<goal>integration-test</goal>
-							</goals>
-						</execution>
-						<execution>
-							<id>verify</id>
-							<goals>
-								<goal>verify</goal>
-							</goals>
-						</execution>
-					</executions>
-				</plugin>
-
+				
 	    	</plugins>
 	    	
     	</pluginManagement>
 
 		<plugins>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
-				</configuration>
-			</plugin>
 
 			<plugin>
 				<groupId>org.jacoco</groupId>
